--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,12 +8,17 @@
     <title>15</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
     <h1>15</h1>
 
     <div class="tags"></div>
 
+    <div class="temp"></div>
+
+
     <script src="app.js"></script>
 </body>
+
 </html>
