--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 
     <h1>Пятнашки</h1>
 
-    <div class="tags"></div>
+    <div class="tags">
+        <div class="tags__field"></div>
+    </div>
 
-    <div class="temp"></div>
+    <!-- <div class="temp"></div> -->
 
 
     <script src="app.js"></script>
